[gd_scene load_steps=6 format=3 uid="uid://gmid67ebwr3m"]

[ext_resource type="Script" path="res://src/enemies/enemy_2.gd" id="1_fxdrt"]
[ext_resource type="Texture2D" uid="uid://dxkores5rgp5j" path="res://asstes/SPRITES/misc/drone/drone-3.png" id="2_ieimv"]
[ext_resource type="PackedScene" uid="uid://dkwok76eo8dvf" path="res://src/enemies/enemy_explosion.tscn" id="3_60iay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do46h"]
size = Vector2(91.5, 197.063)

[sub_resource type="CircleShape2D" id="CircleShape2D_jlxi1"]
radius = 1000.0

[node name="enemy2" type="CharacterBody2D"]
position = Vector2(0, -6)
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_fxdrt")
bSpeed = 700.0
damageValue = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(5.47567, 5.60347)
texture = ExtResource("2_ieimv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_do46h")

[node name="TimePeriod" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -74)
scale = Vector2(1.23548, 0.994872)

[node name="areaofeffect" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 79.4072)
shape = SubResource("CircleShape2D_jlxi1")

[node name="ProjectileContainer" type="Node2D" parent="."]
position = Vector2(0, 20)

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0.25, 1.46875)
shape = SubResource("RectangleShape2D_do46h")

[node name="EnemyExplosion" parent="." instance=ExtResource("3_60iay")]
scale = Vector2(3.24, 3.24)

[node name="DamageTime" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="TimePeriod" to="." method="_on_time_period_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="animation_finished" from="EnemyExplosion" to="." method="_on_enemy_explosion"]
[connection signal="timeout" from="DamageTime" to="." method="_on_damage_time_timeout"]
